# python_uv_mkdocs

./: .gitignore  README.md  build_docs.py  main.py  mkdocs.yml  pyproject.toml  requirements-docs.txt  setup.py  test_demoprogram.py
.github/workflows/: docs-uv.yml  docs.yml
demoprogram/: calc.py
docs/: index.md
docs/api/: calc.md  utility.md
